# icp-rs

./: .gitignore  Cargo.toml  test.ply  test_normals.ply
examples/: assemble.rs  build_map.rs  calc_normals.rs  ellipses.rs  icp.rs  keyframe_odometry.rs  scan_pair.rs  svd_test.rs  voxel_filter.rs
src/: lib.rs  main.rs  voxel_bucket.rs
