[package]
name = "icp"
version = "0.1.0"
authors = ["Артём Павлов [Artyom Pavlov] <newpavlov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.19"
fxhash = "0.2"

[dev-dependencies]
structopt = { version = "0.3", default-features = false }
indicatif = "0.15"
smallvec = "1.4.2"
