[package]
name = "icp"
version = "0.1.0"
authors = ["Артём Павлов [Artyom Pavlov] <newpavlov@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
nalgebra = "0.19"
fxhash = "0.2"

[dev-dependencies]
structopt = { version = "0.3", default-features = false }
indicatif = "0.15"
smallvec = "1.4.2"
